--- a/css/style.css
+++ b/css/style.css
@@ -111,24 +111,50 @@ body {
 }
 
 .mobilebutton {
+  display: none;
   color: #2A6496;
-  position: fixed;
-  top: 26px;
-  left: 330px;
+  background-color: rgba(255, 255, 255, .9);
+  position: absolute;
+  top: 37px;
+  right: 40px;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 4px;
 }
 
 .mobile-close {
   display: inline-block;
   padding: 5px 10px;
   color: gray;
+  cursor: pointer;
+  margin-left: 315px;
 }
 
 .mobileresults {
   position: fixed;
-  top: 65px;
-  left: 5px;
+  top: 92px;
+  right: 10px;
   background-color: rgba(250,250,250, .9);
   max-width: 350px;
+}
+
+@media only screen and (max-width: 775px) {
+  .mobilebutton {
+    display: block;
+  }
+
+  .results {
+    display: none;
+  }
+
+  .searchbar input {
+    width: 150px;
+  }
+
+  .status-msg {
+    padding: 0 18px;
+    font-size: 16px;
+  }
 }
 
 
