--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body {
   top: 37px;
   right: 13px;
   cursor: pointer;
-  padding: 5px;
+  padding: 7px 6px;
   border-radius: 4px;
   border: 2px solid #9ac2c3 ;
 }
