--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   color: black;
   background-color: rgba(255, 255, 255, .9);
   position: absolute;
-  top: 36px;
+  top: 10px;
   right: 78px;
   cursor: pointer;
   padding: 7px 6px;
@@ -28,8 +28,18 @@ body {
   border: 2px solid #9ac2c3;
 }
 
+.locbtn-large {
+  color: black;
+  background-color: rgba(255, 255, 255, .9);
+  position: absolute;
+  top: 34px;
+  left: 319px;
+  cursor: pointer;
+  padding: 7px 6px;
+  border: 1px solid gray;
+}
+
 .locbtn {
-  top: 36px;
   right: 45px;
 }
 
@@ -43,7 +53,7 @@ body {
 }
 
 .searchbar input {
-  width: 250px;
+  width: 175px;
   padding: 5px;
 }
 
@@ -133,7 +143,7 @@ body {
   color: #2A6496;
   background-color: rgba(255, 255, 255, .9);
   position: absolute;
-  top: 37px;
+  top: 10px;
   right: 13px;
   cursor: pointer;
   padding: 7px 6px;
@@ -151,7 +161,7 @@ body {
 
 .mobileresults {
   position: fixed;
-  top: 92px;
+  top: 130px;
   right: 10px;
   background-color: rgba(250,250,250, .9);
   max-width: 350px;
@@ -160,6 +170,10 @@ body {
 @media only screen and (max-width: 775px) {
   .mobilebutton {
     display: block;
+  }
+
+  .searchbar {
+    top: 10px;
   }
 
   .results {
@@ -181,6 +195,10 @@ body {
 
   .searchbtn, .locbtn {
     display: inline;
+  }
+
+  .locbtn-large {
+    display: none;
   }
 }
 
