Add option to filter deal results

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@ body {
   background: green;
 }
 
+.clearbutton {
+  cursor: pointer;
+  text-decoration: underline;
+  color: #2a6496;
+}
+
 #submit {
   width: 80px;
   padding: 7px;
